# trabajo_final_salvador

./: .gitignore  README.md  environment.yml  pyproject.toml
logs/benchmark1/deeplabv3plus/: events.out.tfevents.1779274017.Alienware-m16-R2.28310.1  events.out.tfevents.1780091001.Alienware-m16-R2.5029.1
logs/benchmark1/segformer/: events.out.tfevents.1779279610.Alienware-m16-R2.28310.2  events.out.tfevents.1780095751.Alienware-m16-R2.5029.2
logs/benchmark1/unet/: events.out.tfevents.1779267761.Alienware-m16-R2.28310.0  events.out.tfevents.1780085250.Alienware-m16-R2.5029.0
logs/benchmark2/deeplabv3plus/: events.out.tfevents.1780259076.Alienware-m16-R2.1150444.2
logs/benchmark2/segformer/: events.out.tfevents.1780164541.Alienware-m16-R2.1150444.0
logs/benchmark2/unet/: events.out.tfevents.1780200091.Alienware-m16-R2.1150444.1
logs/unet/: events.out.tfevents.1777741737.Alienware-m16-R2.7893.0  events.out.tfevents.1777741776.Alienware-m16-R2.7893.1  events.out.tfevents.1777742063.Alienware-m16-R2.72240.0  events.out.tfevents.1777742403.Alienware-m16-R2.76945.0  events.out.tfevents.1777742579.Alienware-m16-R2.76945.1  events.out.tfevents.1777742934.Alienware-m16-R2.85355.0
memoria/benchmark1/: resultados_b1_entrenamiento.csv  resultados_finales.csv  resultados_finales_b1.csv
memoria/benchmark2/: resultados_b2_entrenamiento.csv  resultados_finales_b2.csv
notebook/: GPU.ipynb  benchmark1.ipynb  benchmark2.ipynb
