[build-system]
requires = ["setuptools >=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trabajo_final_salvador"
version = "0.1.1"
dependencies = [
]
requires-python = ">=3.12"
authors = [
	{name = "Salvador CM", email = "cbllr022@gmail.com"}
]
readme = "README.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}